# reasoning

./: CMakeLists.txt  README.txt  main.cpp  pattern.cpp
